tests/NormalTests/paczka1/fuzzy1/18732156.err
Error in line 1: S856 A415 22,8
Error in line 15: ctCH A415 19,0
Error in line 18: YNDixhuK9a A645 70,4
Error in line 23: YNDixhuK9a S856 17,9
Error in line 30: 2OxS S521 1,4
Error in line 32: 2OxS S856 80,6
Error in line 33: 2OxS S521 28,9
